--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RESTful API backend for mobile chat app using Node.js, Express, & MySQL",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js", 
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.17.2"
   }
 }
